--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,49 @@
+annotated-types==0.7.0
+anyio==4.6.2.post1
+blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+Faker==30.8.2
+fastapi==0.115.5
+Flask==3.0.3
+gensim==4.3.3
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+MarkupSafe==3.0.2
+neo4j==5.26.0
+neomodel==5.4.0
+nltk==3.9.1
+numpy==1.26.4
+packaging==24.2
+pandas==2.2.3
+pluggy==1.5.0
+psycopg2==2.9.10
+pydantic==2.9.2
+pydantic_core==2.23.4
+pytest==8.3.3
+pytest-asyncio==0.24.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+regex==2024.9.11
 requests==2.32.3
+scipy==1.13.1
+six==1.16.0
+smart-open==7.0.5
+sniffio==1.3.1
+starlette==0.41.2
+tqdm==4.66.6
+typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
+uvicorn==0.32.0
+Werkzeug==3.1.3
+wrapt==1.16.0
